# Bressein

./: .gitignore  AUTHORS  Bressein.cpp  Bressein.h  Bressein.kdev4  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  LICENSE  README  TODO  bressein.cpp  bressein.h  code_style  main.cpp
.kdev4/: Bressein.kdev4
doc/: CMakeLists.txt
gui/: CMakeLists.txt  TODO  bressein.cpp  bressein.h  bresseinmanager.cpp  bresseinmanager.h  chatview.cpp  chatview.h  contactitem.cpp  contactitem.h  contactsscene.cpp  contactsscene.h  groupitem.cpp  groupitem.h  images.qrc  loginscene.cpp  loginscene.h  loginwidget.cpp  loginwidget.h  sidepanelview.cpp  sidepanelview.h  singleton.h  textitem.cpp  textitem.h  textwidget.cpp  textwidget.h
sipc/: CMakeLists.txt  README  account.cpp  account.h  accountinfo.h  aux.cpp  aux.h  conversationmanager.cpp  conversationmanager.h  messagerecorder.cpp  messagerecorder.h  portraitfetcher.cpp  portraitfetcher.h  storeman.cpp  storeman.h  transporter.cpp  transporter.h  types.h  user.cpp  user.h  userinfo.h  userprivate.h  utils.cpp  utils.h
